prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - port: 9090
      targetPort: web
      protocol: TCP
  selector:
    app: prometheus
