ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: javaapp-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: javaapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: javaapp-service
                port:
                  number: 8080
